src/main/kotlin/com/example/demo/errors/GenreNotFound.kt
package com.example.demo.errors

class GenreNotFound(message: String) : RuntimeException(message) {}